--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@angular/platform-browser": "^19.2.0-next.0",
     "@angular/platform-browser-dynamic": "^19.2.0-next.0",
     "@angular/router": "^19.2.0-next.0",
+    "@tailwindcss/postcss": "^4.0.5",
+    "postcss": "^8.5.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.16.0",
+    "tailwindcss": "^4.0.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
